fix: remove places where components widths are not responsive and could possibly be causing left and right whitespace at edges of viewport

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,11 @@
     @apply h-full;
     @apply bg-white;
   }
+
+  main,
+  section {
+    @apply m-0 p-0;
+  }
 }
 
 @layer components {
